--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "desafio-hbs",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start-hbs": "nodemon ./src-hbs/index",
+    "start-pug": "nodemon ./src-pug/index",
+    "start-ejs": "nodemon ./src-ejs/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "pug": "^3.0.2"
   }
 }
